Salamander race
	Can secrete a pool of lava at the cost of halving hp
	Can fling balls of lava that do extra dmg based on xp lvl from pools
		of lava
	Slithy (can go slink through iron bars)
	Can walk through and play in (and store things in) lava
	Can reach expert in spear
	Requires special snakeleg body armour
	Cannot wear boots or even kick things
	Unlock a salamander attack routine at lvl 10
	Spear multishot bonus
	Cannot eat monsters that are too close to amphibians without
		cannibalism penalty
	Lava balls burn down any door within heat range of impact
	Monsters that likes_lava (including you as a salamander)
		regenerate hungerlessly while in lava
Salamander Convict and Rogue quest
	New Pantheon - 
		Lawful - Utu, some fallen sun disk diety
		Neutral - Kossuth, technically not a diety but an old elemental
		Chaotic - Garyx, actualy a fire dragon god but whatever
	Quest leader - Salamander Mage
		Salamander who has learned the way of magic from stealthily
		studying his efreet overlords for years. Respected by
		underling slaves and wants to rebel and lead his own opressive
		colony.
	Quest nemesis - Efreet Sultan
		Bad dangerous efreet turbolord, spews fire, very bad.
	Quest friendly - Salamander Slave
		Weaker salamander that are oppressed by efreet overlords
	Salamander slaves vs efreet
	Levels are some sort of lava planes into like some sort of aladin like
		castle
	Fire elementals
		Slaves of the Efreet
	Efreet
		Evil djinni that cast some fire based and other spells and
			wield scimitars and they are mean.
	Efreet Overseer
		Eviler djinni that cast some fire based and other spells and
			wield scimitars and they are meaner.
	Efreet Merchant
		More dangerous but no whip and less fiery than overseer
	Efreet Guardian
		A slammer and a half of an efreet. Beware.
	Various fire plane enemies
	Journey to the Charcoal palace
		Epic loot
Etherealoid race
	True neutral
	Is large
	Phases through walls
	Resists Disintegration
	Resists Stoning
	Has unchanging